@@ -38,14 +38,15 @@ void flush_init_state_machine(void);
 
 %%
 
-machine pvfs2_flush_sm(prelude,
-                       flush_check_type,
-                       kflush,
-                       kflush_check_error,
-                       bflush, 
-                       bflush_check_error,
-                       final_response,
-                       cleanup)
+machine pvfs2_flush_sm(
+    prelude,
+    flush_check_type,
+    kflush,
+    kflush_check_error,
+    bflush, 
+    bflush_check_error,
+    final_response,
+    cleanup)
 {
     state prelude
     {
@@ -133,10 +134,13 @@ static int flush_check_type(PINT_server_op *s_op, job_status_s * js_p)
  */
 static int flush_keyval_flush(PINT_server_op *s_op, job_status_s * js_p)
 {
-    int ret;
+    int ret = - 1;
     job_id_t i;
 
     PINT_STATE_DEBUG("kflush");
+
+    gossip_debug(GOSSIP_SERVER_DEBUG, " doing keyval flush on %Lu,%d\n",
+                 Lu(s_op->req->u.flush.handle), s_op->req->u.flush.fs_id);
 
     ret = job_trove_keyval_flush(
         s_op->req->u.flush.fs_id,
@@ -148,7 +152,7 @@ static int flush_keyval_flush(PINT_server_op *s_op, job_status_s * js_p)
         &i,
         server_job_context);
 
-    return (ret);
+    return ret;
 }
 
 static int flush_check_error(PINT_server_op *s_op, job_status_s *js_p)
@@ -181,10 +185,13 @@ static int flush_check_error(PINT_server_op *s_op, job_status_s *js_p)
  */
 static int flush_bstream_flush(PINT_server_op *s_op, job_status_s * js_p)
 {
-    int ret;
+    int ret = -1;
     job_id_t i;
 
     PINT_STATE_DEBUG("bflush");
+
+    gossip_debug(GOSSIP_SERVER_DEBUG, " doing bstream flush on %Lu,%d\n",
+                 Lu(s_op->req->u.flush.handle), s_op->req->u.flush.fs_id);
 
     ret = job_trove_bstream_flush(
         s_op->req->u.flush.fs_id,
@@ -196,7 +203,7 @@ static int flush_bstream_flush(PINT_server_op *s_op, job_status_s * js_p)
         &i,
         server_job_context);
 
-    return (ret);
+    return ret;
 }
 	    
 static int flush_cleanup(PINT_server_op *s_op, job_status_s *js_p)
